Add fortify scan on nightly build